--- a/www/voll03/cv01/css/main.css
+++ b/www/voll03/cv01/css/main.css
@@ -80,7 +80,7 @@ a:hover {
     text-decoration: underline;
 }
 
-.nechsitovsecizapamatuji {
+.stress {
     color: white;
     background: red;
     text-align: center;
