--- a/www/mikd08/cv1/vizitka.css
+++ b/www/mikd08/cv1/vizitka.css
@@ -1,47 +1,28 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100vh;
-    margin: 0;
+    align-content: center;
+    margin: 50px;
+}
+
+#card {
+    width: 300px;
+    background-color: rgb(0, 0, 0);
+    border: solid 2px rgb(0, 0, 0);
+    font-size: 1.5em;
+    font-weight: bold;
+    box-shadow: 0 0 10px 2px rgb(0, 0, 0);
     color: rgb(255, 255, 255);
-    gap: 30px;
 }
 
-#name, #surname {
-    display: inline;
+#card > * {
+    margin: 10px 3px;
 }
 
-img {
-    width: 150px;
-    vertical-align: middle;
-    filter: drop-shadow(0 0 20px rgb(0, 0, 0));
+#pic {
+    text-align: center;
 }
 
-.card-side {
-    width: 400px;
-    height: 150px;
-    border-radius: 50px;
-    padding: 50px 30px;
-    box-shadow: 0 0 10px 1px black;
-    background-image: url("https://p0.pikist.com/photos/561/444/space-stars-universe-galaxy-cosmos.jpg");
-    display: flex;
-    align-items: center; 
+#pic img{
+    width: 200px;
 }
-
-#front {
-    justify-content: space-evenly;
-}
-
-#back {
-    justify-content: center;
-    flex-direction: column;
-    gap: 5px;
-}
-
-.info {
-    display: flex;
-    align-items: end;
-}
-
