--- a/www/mikd08/cv2/vizitka.css
+++ b/www/mikd08/cv2/vizitka.css
@@ -1,20 +1,15 @@
 body {
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     height: 100vh;
-    margin: 0;
+    margin: 20px;
     color: rgb(255, 255, 255);
     gap: 30px;
 }
 
-#name, #surname {
-    display: inline;
-}
-
 img {
-    width: 150px;
+    height: 150px;
     vertical-align: middle;
     filter: drop-shadow(0 0 20px rgb(0, 0, 0));
 }
@@ -23,25 +18,27 @@ img {
     width: 400px;
     height: 150px;
     border-radius: 50px;
-    padding: 50px 30px;
+    padding: 50px 40px;
     box-shadow: 0 0 10px 1px black;
     background-image: url("https://p0.pikist.com/photos/561/444/space-stars-universe-galaxy-cosmos.jpg");
     display: flex;
     align-items: center; 
 }
 
-#front {
-    justify-content: space-evenly;
+.front {
+    justify-content: space-around;
 }
 
-#back {
+.back {
     justify-content: center;
     flex-direction: column;
     gap: 5px;
 }
 
+
 .info {
     display: flex;
     align-items: end;
 }
+
 
