--- a/src/public/css/carousel.css
+++ b/src/public/css/carousel.css
@@ -3,7 +3,7 @@
 /* Padding below the footer and lighter body text */
 
 body {
-  padding-top: 3rem;
+  margin: 0;
   padding-bottom: 3rem;
   color: rgb(var(--bs-tertiary-color-rgb));
 }
