my reservations + profile

--- a/www/chet01/sp/scss/_home.scss
+++ b/www/chet01/sp/scss/_home.scss
@@ -67,6 +67,7 @@ header {
             padding: 1em 0;
             margin: unset;
             text-decoration: none;
+            cursor: pointer;
             width: 20%;
             text-align: center;
             &:hover, &.active {
