--- a/www/tolo00/sp/www/styles.css
+++ b/www/tolo00/sp/www/styles.css
@@ -82,11 +82,22 @@ header .login {
     height: auto;
 }
 
+.label:hover {
+    cursor: pointer;
+    color: lightgrey;
+}
+
 .post-date {
     color: white;
     text-align: right;
     font-weight: bold;
     padding-right: .15rem;
+    line-height: 16px;
+}
+
+.post-edit-date {
+    color: grey;
+    line-height: 16px;
 }
 
 .post-text {
@@ -122,6 +133,10 @@ header .login {
 
 .likes-count {
 
+}
+
+.liked, .liked:hover {
+    background-color: #d4f4fc;
 }
 
 .comment-add {
@@ -171,12 +186,17 @@ header .login {
 }
 
 .admin-tools {
-    border: 2px solid lightgrey;
-    padding: 1rem;
     margin-bottom: 1rem;
-
     flex-wrap: nowrap;
     gap: 10px;
+}
+
+.admin-tools .grid-x .cell:first-child {
+    padding-right: 5px;
+}
+
+.admin-tools .grid-x .cell:last-child {
+    padding-left: 5px;
 }
 
 input[type="submit"] {
