--- a/www/trad10/sp/public/css/styles.css
+++ b/www/trad10/sp/public/css/styles.css
@@ -51,42 +51,45 @@
     user-select: none
 }
 
-.normal-btn {
-    margin: 25px;
-    width: auto;
-    display: inline-block;
-    min-width: auto;
-    max-width: 184px;
-    height: 42px;
-    background-color: #fcfcfc;
-    border-radius: 2px;
-    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .2);
+/* App Bar Logo Styles */
+.app-bar-logo-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+.app-bar-logo {
+    height: 40px;
+    margin-right: 10px;
+}
+
+/* Search Bar Styles */
+.search-bar {
+    flex-grow: 1;
+    position: relative;
+    max-width: 400px; /* adjust as needed */
+}
+
+.search-bar form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search-bar input {
+    flex-grow: 1;
+    padding: 5px;
+    padding-right: 30px; /* make room for the search icon */
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+.search-bar button {
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    border: none;
+    background: none;
     cursor: pointer;
-    cursor: hand;
-    align-self: center;-webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    transition: all 400ms ease 0s
-}
-.normal-btn .btn-text {
-    float: left;
-    margin: 11px 14px 11px 14px;
-    color: #757575;
-    font-size: 14px;
-    letter-spacing: .2px;
-    font-family: Roboto;
-    user-select: none
-}
-.normal-btn:hover {
-    box-shadow: 0 3px 8px rgba(117, 117, 117, .5);
-    user-select: none
-}
-.normal-btn:active {
-    box-shadow: 0 1px 1px #757575;
-    background: #F8F8F8;
-    color: #fff;
-    user-select: none
 }
