--- a/www/trad10/sp/public/css/styles.css
+++ b/www/trad10/sp/public/css/styles.css
@@ -93,3 +93,32 @@
     background: none;
     cursor: pointer;
 }
+
+.post {
+    border: 1px solid #ccc;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+body {
+    background: #f4f4f4;
+}
+
+.card {
+    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.1);
+}
+
+.card-title a {
+    color: #333;
+    text-decoration: none;
+}
+
+.card-title a:hover {
+    color: #007bff;
+    text-decoration: underline;
+}
+
+.btn-primary {
+    margin-right: 1em;
+}
