--- a/www/dokt00/sp/pages/logged_in/styles.css
+++ b/www/dokt00/sp/pages/logged_in/styles.css
@@ -188,23 +188,23 @@ footer nav ul li a:hover {
 }
 
 .modal {
-    display: none; 
-    position: fixed; 
-    z-index: 1; 
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; 
-    height: 100%; 
+    width: 100%;
+    height: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.4); 
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; 
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 30%; 
+    width: 30%;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -222,6 +222,22 @@ footer nav ul li a:hover {
     text-decoration: none;
     cursor: pointer;
 }
+
+input[type=submit] {
+    padding:5px 15px; 
+    background:#ccc; 
+    color: white;
+    border:0 none;
+    cursor:pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px; 
+    background-color: #444;
+}
+
+.button:hover {
+    background-color: #4CAF50; 
+    color: white;
+  }
 
 #register-form {
     display: flex;
@@ -281,4 +297,3 @@ footer nav ul li a:hover {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
