--- a/www/dokt00/sp/styles.css
+++ b/www/dokt00/sp/styles.css
@@ -229,6 +229,12 @@ footer nav ul li a:hover {
     align-items: center;
 }
 
+#billing-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #register-form label {
     align-self: flex-start;
     margin-top: 10px;
