--- a/www/janl22/4iz278-sp/src/app/Presenters/templates/Users/employees.latte
+++ b/www/janl22/4iz278-sp/src/app/Presenters/templates/Users/employees.latte
@@ -35,10 +35,16 @@
                                     <button class="btn btn-outline-primary btn-floating btn-sm me-2"><i
                                                 class="fas fa-search-plus"></i></button>
                                 </a>
-                                <a n:href="RemoveUser! $evidedUser->id_user">
-                                    <button class="btn btn-outline-danger btn-floating btn-sm"
-                                            onclick=""><i class="fas fa-trash-alt"></i></button>
-                                </a>
+
+                                {if $evidedUser->deletable}
+
+                                    <a n:href="RemoveUser! $evidedUser->id_user">
+                                        <button class="btn btn-outline-danger btn-floating btn-sm"
+                                                onclick=""><i class="fas fa-trash-alt"></i></button>
+                                    </a>
+
+                                {/if}
+
                             </td>
                         </tr>
                     {/foreach}
