SP v1.0.3 - Fix: MyOrders only for customers & link to employees section

--- a/www/janl22/4iz278-sp/src/app/Presenters/templates/Homepage/default.latte
+++ b/www/janl22/4iz278-sp/src/app/Presenters/templates/Homepage/default.latte
@@ -5,6 +5,11 @@
 
         <div class="row animation fade-in">
 
+            <div class="alert alert-{$flash->type} mb-4"
+                 role="alert" n:if="$flashes" n:foreach="$flashes as $flash">
+                {$flash->message}
+            </div>
+
             <div class="col-12 col-8 mb-4">
 
                 <div class="card w-100 h-100">
