--- a/www/topa00/sp/styles/main.css
+++ b/www/topa00/sp/styles/main.css
@@ -13,6 +13,7 @@
   --color-red: rgba(255, 99, 71, 0.8);
   --color-red-dark: rgba(255, 99, 71, 0.9);
   --color-green: rgba(34, 139, 34, 0.8);
+  --color-green-dark: rgba(34, 139, 34, 0.9);
   --color-yellow: rgba(191, 125, 3, 0.7);
   --color-blue: rgba(63, 84, 165, 0.9);
 
@@ -245,7 +246,7 @@ navigation button {
 .category-buttons_container {
   width: fit-content;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   gap: 1rem;
 }
 
@@ -318,6 +319,26 @@ footer {
   color: var(--color-bg);
 }
 
+.like {
+  background: var(--color-green-dark);
+  display: flex;
+}
+
+.like img {
+  width: 1.5rem;
+  margin-right: 0.6rem;
+}
+
+.dislike {
+  background: var(--color-red-dark);
+  display:flex;
+}
+
+.dislike img {
+  width: 1.5rem;
+  margin-right: 0.6rem;
+}
+
 /* ======================= SINGLE POST ======================= */
 .single-post {
   margin: 6rem 0 2rem;
@@ -330,6 +351,7 @@ footer {
 .single-post_container p{
   margin-top: 1rem;
   line-height: 1.7;
+  margin-bottom: 1rem;
 }
 
 .single-post_thumbnail {
@@ -340,6 +362,14 @@ footer {
   background: var(--color-bg-dark);
   border-radius: 0.5rem;
   padding: 0.6rem 1.2rem;
+}
+
+.single-post_container .post_action {
+  background: var(--color-bg-dark);
+  border-radius: 0.5rem;
+  padding: 0.6rem 1.2rem;
+  display:flex;
+  gap: 1rem;
 }
 
 /* ======================= CATEGORY POSTS ======================= */
