--- a/www/vikd00/sp/styles.css
+++ b/www/vikd00/sp/styles.css
@@ -1,7 +1,19 @@
 .image-container {
     width: 100%;
-    height: 600px;
+    height: 658px;
     overflow: hidden;
+}
+
+.image-ad {
+    width: 400px;
+    height: 300px;
+    object-fit: cover;
+}
+
+.image-large {
+    width: 80%;
+    height: 400px;
+    object-fit: cover;
 }
 
 .image {
@@ -10,7 +22,55 @@
     object-fit: cover;
 }
 
+.verticalLine {
+    border-left: 2px solid #3d3d3d;
+}
+
+.chatbox {
+    min-height: 520px;
+    height: 520px;
+}
+
+.conversations {
+    min-height: 350px;
+    height: 350px;
+    overflow-y: scroll;
+}
+
 .container-content {
     background-color: #90a4ae;
     min-height: 100vh;
+}
+
+.logo-large-wrapper {
+    margin-left: 60px;
+    margin-top: 20px;
+}
+
+.logo-large {
+    width: 150px;
+}
+
+.logo-xsmall {
+    width: 90px;
+}
+
+.logo-small {
+    width: 210px;
+}
+
+.chat-bubble-me {
+    color: white;
+    border-radius: 20px;
+    padding: 10px;
+    margin-bottom: 10px;
+    margin-left: 70%;
+}
+
+.chat-bubble-other {
+    color: white;
+    border-radius: 20px;
+    padding: 10px;
+    margin-bottom: 10px;
+    margin-right: 70%;
 }
